[gd_scene load_steps=17 format=3 uid="uid://bq8ls2updkft4"]

[ext_resource type="Texture2D" uid="uid://c41oq5kehcju6" path="res://Elijah/UI/Menus/001.png" id="1_rsrps"]
[ext_resource type="Texture2D" uid="uid://ptpcx0xxd205" path="res://Elijah/UI/Menus/001-002.png" id="2_40tup"]
[ext_resource type="Texture2D" uid="uid://dgej0ej0aig5v" path="res://Elijah/UI/001.png" id="3_bcus1"]
[ext_resource type="Texture2D" uid="uid://cg56r52odpkdk" path="res://Elijah/UI/002.png" id="4_274tf"]
[ext_resource type="Texture2D" uid="uid://b55i16up2lebr" path="res://Elijah/UI/000.png" id="5_jegow"]
[ext_resource type="Script" path="res://Elijah/Scripts/transition_next_scene.gd" id="6_1bi2y"]
[ext_resource type="Script" path="res://Elijah/TitleBob.gd" id="7_bj088"]
[ext_resource type="Texture2D" uid="uid://bdnhgljkxfc7p" path="res://Elijah/UI/Menus/Black.png" id="8_5x8ay"]
[ext_resource type="Texture2D" uid="uid://bctemkbydwxve" path="res://Elijah/UI/Menus/Black._ball.png" id="9_nexaa"]
[ext_resource type="Script" path="res://Elijah/TestEnvironment/fadeIn.gd" id="10_2xf8w"]

[sub_resource type="Animation" id="Animation_j0fxt"]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2500, 0), Vector2(-2, 0)]
}

[sub_resource type="Animation" id="Animation_43l21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2411, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5rxe"]
_data = {
"FadeToBlack": SubResource("Animation_j0fxt"),
"RESET": SubResource("Animation_43l21")
}

[sub_resource type="Animation" id="Animation_5ynij"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WelcomeScene/CanvasLayer/FadeIn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9, 0), Vector2(-2533, 0)]
}

[sub_resource type="Animation" id="Animation_m3aut"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WelcomeScene/CanvasLayer/FadeIn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpti3"]
_data = {
"FadeIn": SubResource("Animation_5ynij"),
"RESET": SubResource("Animation_m3aut")
}

[node name="WelcomeScene" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackGround" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.001
offset_bottom = 0.0461426
texture = ExtResource("1_rsrps")
expand_mode = 5

[node name="Panel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.227
anchor_top = 0.766
anchor_right = 0.749
anchor_bottom = 0.967
offset_left = 535.16
offset_top = 250.72
offset_right = -467.08
offset_bottom = 33.6399
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4

[node name="Base" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
offset_left = -321.0
offset_top = -285.0
offset_right = 757.0
offset_bottom = 3.00012
scale = Vector2(0.58, 1)
texture = ExtResource("2_40tup")

[node name="StartButton" type="TextureButton" parent="CanvasLayer/Panel/Base"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.042
anchor_right = 0.955
anchor_bottom = 0.885
offset_left = 3.61
offset_top = -0.0959997
offset_right = -477.49
offset_bottom = 10.12
scale = Vector2(1.895, 1)
texture_normal = ExtResource("3_bcus1")
texture_pressed = ExtResource("4_274tf")
texture_hover = ExtResource("5_jegow")

[node name="Label" type="Label" parent="CanvasLayer/Panel/Base/StartButton"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 504.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 156
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Welcome" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.0
offset_top = 38.0
offset_right = 207.0
offset_bottom = 170.0
grow_horizontal = 2
pivot_offset = Vector2(923.5, 394.5)
theme_override_font_sizes/font_size = 116
text = "welcome"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_bj088")
bob_speed = 0.185
bob_amplitude = 0.075
tilt_speed = 0.16
tilt_amplitude = 0.73

[node name="words" type="Label" parent="CanvasLayer/Welcome"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -905.5
offset_top = 128.0
offset_right = 906.5
offset_bottom = 260.0
grow_horizontal = 2
pivot_offset = Vector2(923.5, 394.5)
theme_override_font_sizes/font_size = 76
text = "pop enough bubbles to beat the level"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_bj088")
bob_speed = 0.185
bob_amplitude = 0.435
tilt_speed = 0.16
tilt_amplitude = 0.585

[node name="words" type="Label" parent="CanvasLayer/Welcome/words"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -905.5
offset_top = 128.0
offset_right = 906.5
offset_bottom = 260.0
grow_horizontal = 2
pivot_offset = Vector2(923.5, 394.5)
theme_override_font_sizes/font_size = 76
text = "beat levels to earn boons"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_bj088")
bob_speed = 0.185
bob_amplitude = 0.67
tilt_speed = 0.16
tilt_amplitude = 0.555

[node name="words" type="Label" parent="CanvasLayer/Welcome/words/words"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -905.5
offset_top = 128.0
offset_right = 906.5
offset_bottom = 260.0
grow_horizontal = 2
pivot_offset = Vector2(923.5, 394.5)
theme_override_font_sizes/font_size = 76
text = "each level you are cursed with a burst"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_bj088")
bob_speed = 0.185
bob_amplitude = 0.17
tilt_speed = 0.16
tilt_amplitude = 0.29

[node name="words" type="Label" parent="CanvasLayer/Welcome/words/words/words"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -905.5
offset_top = 128.0
offset_right = 906.5
offset_bottom = 260.0
grow_horizontal = 2
pivot_offset = Vector2(923.5, 394.5)
theme_override_font_sizes/font_size = 76
text = "each third level is a boss burst"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_bj088")
bob_speed = 0.185
bob_amplitude = 0.36
tilt_speed = 0.16
tilt_amplitude = 0.185

[node name="words" type="Label" parent="CanvasLayer/Welcome/words/words/words/words"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -905.5
offset_top = 128.0
offset_right = 906.5
offset_bottom = 260.0
grow_horizontal = 2
pivot_offset = Vector2(923.5, 394.5)
theme_override_font_sizes/font_size = 76
text = "good luck!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_bj088")
bob_speed = 0.185
bob_amplitude = 0.73
tilt_speed = 0.16
tilt_amplitude = 0.23

[node name="FadeOut" type="TextureRect" parent="CanvasLayer" node_paths=PackedStringArray("transition_anim")]
offset_left = 2500.0
offset_right = 4420.0
offset_bottom = 1080.0
texture = ExtResource("8_5x8ay")
script = ExtResource("6_1bi2y")
transition_anim = NodePath("AnimationPlayer")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/FadeOut"]
layout_mode = 0
offset_left = -474.0
offset_right = 592.0
offset_bottom = 1074.0
texture = ExtResource("9_nexaa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/FadeOut"]
libraries = {
"": SubResource("AnimationLibrary_l5rxe")
}

[node name="FadeIn" type="TextureRect" parent="CanvasLayer"]
offset_left = 9.0
offset_right = 1929.0
offset_bottom = 1080.0
texture = ExtResource("8_5x8ay")
script = ExtResource("10_2xf8w")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/FadeIn"]
layout_mode = 0
offset_left = 1424.0
offset_top = -2.0
offset_right = 2490.0
offset_bottom = 1073.46
scale = Vector2(1.005, 1.005)
texture = ExtResource("9_nexaa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/FadeIn"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_dpti3")
}
autoplay = "FadeIn"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="CanvasLayer/Panel/Base/StartButton" to="CanvasLayer/FadeOut" method="_on_start_button_pressed"]
[connection signal="animation_finished" from="CanvasLayer/FadeIn/AnimationPlayer" to="CanvasLayer/FadeIn" method="_on_animation_player_animation_finished"]
